--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	<link rel=stylesheet type="text/css" media=all href="css/component.css" />
 	<link href="css/main.css" rel=stylesheet>
 	<link rel=stylesheet href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700">
-	<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel=stylesheet type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Niconne&amp;subset=latin,latin-ext' rel=stylesheet
+	<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel=stylesheet type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Niconne&amp;subset=latin,latin-ext' rel=stylesheet
 		type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel=stylesheet type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Pacifico' rel=stylesheet type='text/css'>
 
 	<script src="js/modernizr.min.js"></script>
 	<!--[if lt IE 9]>
