Site Push:https

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<link rel=stylesheet type="text/css" media=all href="css/supersized.css" />
 	<link rel=stylesheet type="text/css" media=all href="css/component.css" />
 	<link href="css/main.css" rel=stylesheet>
-	<link rel=stylesheet href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700">
+	<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700">
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel=stylesheet type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Niconne&amp;subset=latin,latin-ext' rel=stylesheet
 		type='text/css'>
@@ -220,7 +220,7 @@
 		<div class=container>
 			<div class=row>
 				<div id=copy>
-					<span>Crafted with &#10084; by <a href="http://linkedin.com/in/joshiananya">Ananya
+					<span>Crafted with &#10084; by <a href="https://linkedin.com/in/joshiananya">Ananya
 							Joshi</a></span>
 				</div>
 			</div>
