--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
 							<div class="col-lg-6 col-lg-offset-3">
 								<h2>Map</h2>
 
-								<a href="https://maps.google.com/maps/dir//Modinagar+Uttar+Pradesh+201204+India/@28.8293658,77.5687944,18z/data=!4m5!4m4!1m0!1m2!1m1!1s0x390c8aae1210c121:0x2faee37c17bfe041"
-									target="_blank"><img src="images/map.JPG" class="img-responsive"></a>
+								<a href="https://goo.gl/maps/hoHseWJfw3UCCwvv8" target="_blank"><img
+										src="images/map.JPG" class="img-responsive"></a>
 							</div>
 						</div>
 					</div>
