--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
 				<br>
 				<h2 class=amp style="    font-family: 'Macondo Swash Caps', cursive;
 				color: rgb(193 22 22);
-				background: rgb(225 225 225 / 50%);">Welcome to
-					the World,
-					<br>
-					<span class="blurry-text">Some Secret Name</span> Joshi!
+				background: rgb(225 225 225 / 50%);">Naamkaran Ceremony
 				</h2>
 				<h1 style=" font-family: 'Caveat', cursive;
 				color: rgb(193 22 22);
