--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name=description content="A hearty invitation to you to Undefined Joshi's Welcome Party">
+	<meta name=description content="A hearty invitation to you to Baby Joshi's Welcome Party">
 	<meta name=author content="">
 	<link rel="shortcut icon" href="img/favicon.ico">
-	<title>Welcome Undefined Joshi | Hearty Invitation to you</title>
+	<title>Welcome Baby Joshi | Hearty Invitation to you</title>
 	<link
 		href="https://fonts.googleapis.com/css?family=Dancing+Script|Great+Vibes|Indie+Flower|Sacramento|Satisfy|Shadows+Into+Light"
 		rel="stylesheet">
