--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 	<link href='https://fonts.googleapis.com/css?family=Niconne&amp;subset=latin,latin-ext' rel=stylesheet
 		type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Pacifico' rel=stylesheet type='text/css'>
+	<meta charset="utf-8">
+
+	<script async src="https://cdn.ampproject.org/v0.js"></script>
+	<link rel="canonical" href="https://amp.dev/documentation/guides-and-tutorials/start/create/basic_markup/">
+	<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
 	<script src="js/modernizr.min.js"></script>
 	<!--[if lt IE 9]>
