--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
 
 			<div class=container>
 				<br>
-				<h2 class=amp style="    font-family: 'Macondo Swash Caps', cursive;
-				color: rgb(193 22 22);
-				background: rgb(225 225 225 / 50%);">Naamkaran Ceremony
+				<h2 class="amp sexy-text glow" style="font-family: 'Macondo Swash Caps', cursive;">Naamkaran Ceremony
 				</h2>
-				<h1 style=" font-family: 'Caveat', cursive;
-				color: rgb(193 22 22);
-				background: rgb(225 225 225 / 50%);">You are invited to welcome
-					<br><span style="font-size: 60px;">Little Joshi</span><br> SON OF MAYANK & KRISHNA JOSHI
+				<h1 class="sexy-text glow" style=" font-family: 'Caveat', cursive;">You are invited to welcome
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<span style="font-size: 90px;">Little Joshi</span><br> SON OF MAYANK & KRISHNA JOSHI
 				</h1>
 				<div class=row>
 					<br>
@@ -73,9 +74,9 @@
 		<div class=white>
 			<div class=container>
 				<div class=row>
-					<h2>Let's Reveal Name of baby boy!</h2>
-					<h2>Tuesday, Nov 30 : 10 am @Residence, Modinagar</h2> <br>
-					<h2>The event begins in:</h2>
+					<h2 class="text-white">Let's Reveal Name of baby boy!</h2>
+					<h2 class="text-white">Tuesday, Nov 30 : 10 am @Residence, Modinagar</h2> <br>
+					<h2 class="text-white">The event begins in:</h2>
 					<span class=hearts></span>
 				</div>
 				<div class=row>
@@ -197,7 +198,7 @@
 					<div class=container>
 						<div class=row>
 							<div class="col-lg-6 col-lg-offset-3">
-								<h2>Map</h2>
+								<h2 class="text-white">Map</h2>
 
 								<a href="https://goo.gl/maps/hoHseWJfw3UCCwvv8" target="_blank"><img
 										src="images/map.JPG" class="img-responsive"></a>
@@ -218,16 +219,19 @@
 				</div>
 			</div>
 	</section>
-	<div id=footer>
-		<div class=container>
-			<div class=row>
-				<div id=copy>
-					<span>Crafted with &#10084; by <a href="https://linkedin.com/in/joshiananya">Ananya
-							Joshi</a></span>
+	<section id="foot">
+		<div id=footer>
+			<div class=container>
+				<div class=row>
+					<div id=copy>
+						<span>Crafted with &#10084; by <a href="https://linkedin.com/in/joshiananya">Ananya
+								Joshi</a></span>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
+
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.lwtCountdown-1.0.js"></script>
