--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 					<br>
 					<br>
 					<span style="font-size: 90px;">Little Joshi</span><br> SON OF MAYANK & KRISHNA JOSHI
+					<br> GRANDSON OF MR & MRS G.B. JOSHI
 				</h1>
 				<div class=row>
 					<br>
@@ -164,6 +165,8 @@
 												<br><b>Lunch with us : 1 PM </b><br>
 												<br>proud parents
 												<center><b>MAYANK & KRISHNA JOSHI</b> </center>
+												<br>proud grandparents
+												<center><b>MR. G.B JOSHI & MRS. RITA JOSHI</b> </center>
 									</p>
 								</div>
 							</div>
