--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<br>
 					<br>
 					<span style="font-size: 90px;">Little Joshi</span><br> SON OF MAYANK & KRISHNA JOSHI
-					<br> GRANDSON OF MR & MRS G.B. JOSHI
+					<br><br> GRANDSON OF MR & MRS G.B. JOSHI
 				</h1>
 				<div class=row>
 					<br>
