--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 						<div class=row>
 							<div class="col-lg-8 col-lg-offset-2">
 								<h2>Phone</h2>
-								<span><a href="tel:9045871549">9045871549</a></span>
+								<span>G.B. Joshi <br> <a href="tel:9045871549">9045871549</a></span>
 							</div>
 						</div>
 					</div>
